force-app/main/default/objects/Asset_Link__c/Asset_Link__c.object-meta.xml
<CustomObject>
    <description>Links to particular assets</description>
    <label>Activity Asset Link</label>
    <nameField>
        <displayFormat>AL-{000000}</displayFormat>
        <label>Asset Link Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Activity Asset Links</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>