force-app/main/default/objects/Asset_Link__c/fields/Asset_Type__c.field-meta.xml
<CustomField>
    <fullName>Asset_Type__c</fullName>
    <description>The Type of asset this links to</description>
    <inlineHelpText>The Type of asset this links to</inlineHelpText>
    <label>Asset Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Asset_Type</valueSetName>
    </valueSet>
</CustomField>