force-app/main/default/objects/Asset_Link__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The brand related to this asset</description>
    <inlineHelpText>The brand related to this asset</inlineHelpText>
    <label>Account</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Must be related to a brand</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Brand</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Activity Asset Links and Reports</relationshipLabel>
    <relationshipName>Activity_Asset_Links_and_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>